# exercise-logger

./: .gitignore  CLAUDE.md  LICENSE  PLANS.md  README.md  buildozer.spec  main.py  pyproject.toml
.github/workflows/: build-apk.yml  deploy-web.yml
docs/: codebase-review-2026-04-16.md  codebase-review-2026-04-17.md  design-spec.md  notes.md  test-suite-review-2026-04-08.md  ui-rewrite-spec.md
docs/custom-gpt/: README.md  action-validator.md  action-validator.openapi.yaml  exercise-catalog-reference.md  routine-yaml-contract.md  workout-routine-gpt.instructions.md
docs/exercises/: gym_exercises_catalog.csv  workout-routine.jsx
src/: config.py  main.py  theme.py
src/data/: benchmarks.yaml  exercises.csv
src/db/: connection.py  schema.py  seed.py
src/loaders/: benchmark_loader.py  exercise_loader.py  routine_loader.py
src/models/: benchmark.py  bundled.py  enums.py  exercise.py  routine.py  settings.py  workout.py
src/repositories/: base.py  (+6 more)
tests/: conftest.py  test_app_state_service.py  test_benchmark_loader.py  test_benchmark_repo.py  test_benchmark_service.py  test_cycle_service.py  test_db_schema.py  test_exercise_loader.py  test_exercise_service.py  test_import_export.py  test_integration.py  test_models.py  test_registries.py  test_routine_loader.py  test_routine_service.py  test_settings_and_units.py  test_settings_repo.py  test_settings_service.py  test_stats_service.py  test_target_payload.py  test_workout_repo.py  test_workout_service.py
web/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+252 files in other folders)
