[project]
name = "exercise-logger"
version = "0.1.0"
description = "Mobile workout logger for Android built with Python + Flet"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
