[project]
name = "exercise-logger"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "kivy>=2.3.0,<2.4",
    "kivymd>=2.0.0,<2.1",
    "matplotlib>=3.8.0",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
